
	* src/datafile.c:  Remove incorrect fall-back definition for MAXINT.
	Note:  ~0>>1  is _not_ guaranteed to shift a 0 into the high bit!

	* src/term.c src/unset.c src/term_api.h:
	Consistent with the documented generic meaning of "unset", the command
	"unset terminal" now restores the default terminal present at program
	entry.  I.e., it is equivalent to "set terminal GNUTERM".

	* docs/gnuplot.doc:
	- Add sections for "unset output" and "unset terminal".
	- Remove index entries for "set style <plotstyle>" since there is no
	  such command.
	- Bessel functions Jn and Yn by convention use a capital letter. 

2012-08-23  Thomas Gaillard <tgaillard@users.sourceforge.net>

	* src/interpol.c:  Mean and sigma of kernel density function were
	incorrectly calculated.
	Bug #3519563

2012-08-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: In the code for drawing the key box and key samples,
	replace direct calls to term->move() and term->vector() with calls to
	clip_move() and clip_vector().
	Bug #3560531

	* src/plot2d.c src/plot3d.c:  Downgrade detection of a trailing comma
	in a plot command to a warning rather than an error.  This allows more
	convenient re-ordering of multi-line plot elements when replotting.

2012-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* lisp/gnuplot.el: elisp is now getting serious about a syntax change
	announced 10+ years ago.   s/(` (/`(/
	While here, clean out some old cruft from the directory.

2012-08-07  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.trm:  Revised test for transparency support to match
	the implementation in AquaTerm version 1.1.1

2012-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/plot2d.c src/tabulate.c:
	Blank lines separating datasets in an input file were stored as an
	UNDEFINED point but not otherwise marked. This patch introduces a
	recognizable (struct coordinate)blank_data_line that is stored when